fix: overflow modal - PAGES

--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -154,7 +154,7 @@
     }
 
     .modalFuncionarios>div {
-        overflow-y: unset;
+        overflow-y:hidden;
     }
 
     .editAdmiss{
